--- a/development.ini
+++ b/development.ini
@@ -1,4 +1,4 @@
-[app:main]
+[app:kotti]
 use = egg:kotti
 
 pyramid.reload_templates = true
@@ -10,6 +10,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
+    pyramid_deform
 sqlalchemy.url = sqlite:///%(here)s/Kotti.db
 
 kotti.site_title = Kotti with mapreduce
@@ -18,9 +19,21 @@ kotti.secret = qwerty
 # for debugtoolbar
 debugtoolbar.hosts = 0.0.0.0/0
 
-# kotti_mapreduce specific configuration:
-kotti.configurators = kotti_mapreduce.kotti_configure
+# for pyramid_deform
+pyramid_deform.tempdir = /tmp/pyramid_deform/
 
+# kotti_mapreduce specific configuration:
+kotti.configurators =
+    kotti_tinymce.kotti_configure
+    kotti_mapreduce.kotti_configure
+
+[filter:fanstatic]
+use = egg:fanstatic#fanstatic
+
+[pipeline:main]
+pipeline =
+    fanstatic
+    kotti
 
 [server:main]
 use = egg:waitress#main
